# zq3d

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
src/: zq3d.cpp  zq3d.h  zq3d.rc
src/header/: globals.h
src/platform/msw/: zq3d.manifest
src/render/: RenderEngine.cpp  RenderEngine.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
src/scene/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Light.h  LightSource.cpp  LightSource.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  SceneManager.cpp  SceneManager.h  Texture.cpp  Texture.h
src/time/: TimeManager.cpp  TimeManager.h
src/ui/: ZQFrame.cpp  ZQFrame.h  ZQGLCanvas.cpp  ZQGLCanvas.h  ZQGLContext.cpp  ZQGLContext.h
src/utils/: TestUtils.cpp  TestUtils.h  Utils.cpp  Utils.h
